# chatserver

./: CMakeLists.txt  README.md  connectionpool.h  functional_test.py  mprpc.conf  mysql.conf  start_services.sh  stop_services.sh  test_service.sh
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: connectionpool.h  db.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemsgmodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
rpc/: CMakeLists.txt  logger.cc  mprpcapplication.cpp  mprpcconfig.cpp  mprpcconsumer.cpp  mprpccontroller.cc  mprpcheader.pb.cc  mprpcheader.proto  mprpcprovider.cpp  zookeeperutil.cc
rpc/include/: mprpcapplication.h  mprpcconfig.h  mprpcconsumer.h  mprpccontroller.h  mprpcheader.pb.h  mprpcprovider.h  zookeeperutil.h
rpc/include/mprpclog/: lockqueue.h  logger.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: connectionpool.cpp  db.cpp
src/server/model/: firendmodel.cpp  groupmodel.cpp  offlinemsgmodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
src/servicePro/: CMakeLists.txt  circuitbreaker.cc  circuitbreaker.h  loadbalancer.cc  loadbalancer.h  monitor.cc  monitor.h  serverbase.cc  servicebase.h
test/: CMakeLists.txt  test_connectionpool.cpp  testjson  testjson.cpp
test/connectionpool/: test_db_connection.cpp
test/example/: user.pb.cc  user.pb.h  user.proto
test/example/callee/: CMakeLists.txt  main.cc  userservice.cc  userservice.hpp
test/example/caller/: CMakeLists.txt  main.cc
test/stress_test/: CMakeLists.txt  README.md  USAGE_GUIDE.md  connection_test.cpp  distributed_stress_test.py  monitor.sh  run_stress_test.sh  stress_client.cpp  tcpkali_test.sh
test/stress_test/python/: README.md  SMART_TEST_GUIDE.md  SOLUTION_GUIDE.md  batch_register.py  connection_test.py  monitor.py  quick_test.py  run_stress_test.py  simple_stress_test.py  smart_stress_test.py  stress_client.py
test/testmuduo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sever  testmoduo  testmoduo.cpp
